Fix GH publishing for releases (#338)